# trepan-xpy

./: .gitignore  ChangeLog  Makefile  NEWS.md  README.md  README.rst  __pkginfo__.py  pyproject.toml  setup.cfg  setup.py
admin-tools/: how-to-make-a-release.md  make-dist-3.2-3.5.sh  make-dist-newer.sh  make-dist-older.sh  make-dist.sh  merge-for-2.7.sh  merge-for-3.2.sh  pyenv-versions  pyenv-versions-newer  pyenv-versions-older  setup-master.sh  setup-python-2.7.sh  setup-python-3.2.sh  setup-python-3.6.sh
screenshots/: .gitignore  README.md  trepan-xpy-demo1.cast  trepan-xpy-demo1.txt  trepan-xpy-demo2.cast
test/example/: gcd.py
trepanxpy/: __init__.py  __main__.py  clifns.py  core.py  debugger.py  debugger_defaults.py  events.py  fmt.py  misc.py  version.py
trepanxpy/lib/: core.py
trepanxpy/processor/: cmd.py  trace.py
trepanxpy/processor/command/: backtrace.py  continue.py  finish.py  info.py  next.py  python.py  quit.py  return.py  set.py  show.py  step.py  stepi.py  vmstack.py
trepanxpy/processor/command/info_subcmd/: __init__.py  blocks.py  frame.py  pc.py  stack.py
trepanxpy/processor/command/set_subcmd/: __init__.py  autostack.py  logging.py  loglevel.py  logtrace.py  pc.py
trepanxpy/processor/command/show_subcmd/: autostack.py  loglevel.py
trepanxpy/processor/command/vmstack_subcmd/: __init__.py  peek.py  pop.py  push.py
