[build-system]
requires = [
    "setuptools",
]

build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Rocky Bernstein",	email = "rb@dustyfeet.com"},
]

name = "trepanxpy"
description = "GDB-like Debugger for x-python in the Trepan family"
dependencies = [
    "decompyle3 >= 3.9.2",
    "term-background >= 1.0.2",
    "trepan3k >= 1.4.0",
    "uncompyle6 >= 3.9.2",
    "x-python >= 1.5.2",
]
readme = "README.rst"
license = "GPL-3.0-or-later"
keywords = ["Python bytecode", "bytecode", "disassembler"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.0",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
]
full = [
    "prompt-toolkit",    # Alternate interface, akin to GNU Readline
]

[project.scripts]
trepan-xpy   = "trepanxpy.__main__:main"

[project.urls]
Homepage = "https://pypi.org/project/trepan-xpy/"
Downloads = "https://github.com/Trepan-Debuggers/trepan-xpy/releases"

[tool.pyright]
include = ["trepanxpy"]
# exclude = []
ignore = ["dist", "docs", "tmp", ".cache"]
# defineConstant = { DEBUG = true }
# stubPath = "src/stubs"

[tool.setuptools]
packages = [
    "trepanxpy",
    "trepanxpy.processor",
]

[tool.setuptools.dynamic]
version = {attr = "trepanxpy.version.__version__"}
